--- a/viewer/day15.html
+++ b/viewer/day15.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,173 +34,173 @@
 </div>
 <h1>Day 15</h1>
 <pre>
-use std::cmp::max;
-use std::ops::{Add, Mul};
-use crate::utils;
-#[derive(Clone, Debug)]
-struct Ingredient {
-    name: String,
-    capacity: i64,
-    durability: i64,
-    flavor: i64,
-    texture: i64,
-    calories: i64,
-}
-
-impl Ingredient {
-    fn from_str(s: &str) -> Self {
-        let words: Vec<_> = s.split_whitespace().collect();
-        Self {
-            name: words[0].trim_end_matches('.').to_owned(),
-            capacity: words[2].trim_end_matches(',').parse::<i64>().unwrap(),
-            durability: words[4].trim_end_matches(',').parse::<i64>().unwrap(),
-            flavor: words[6].trim_end_matches(',').parse::<i64>().unwrap(),
-            texture: words[8].trim_end_matches(',').parse::<i64>().unwrap(),
-            calories: words[10].trim_end_matches(',').parse::<i64>().unwrap(),
-        }
-    }
-
-    fn score(&self) -> i64 {
-        self.capacity * self.durability * self.flavor * self.texture
-    }
-}
-
-impl Mul<i64> for Ingredient {
-    type Output = Self;
-
-    fn mul(self, rhs: i64) -> Self {
-        Self {
-            name: self.name.clone(),
-            capacity: self.capacity * rhs,
-            durability: self.durability * rhs,
-            flavor: self.flavor * rhs,
-            texture: self.texture * rhs,
-            calories: self.calories * rhs,
-        }
-    }
-}
-
-impl Add for Ingredient {
-    type Output = Self;
-
-    fn add(self, rhs: Self) -> Self {
-        Self {
-            name: self.name.clone(),
-            capacity: max(self.capacity + rhs.capacity, 0),
-            durability: max(self.durability + rhs.durability, 0),
-            flavor: max(self.flavor + rhs.flavor, 0),
-            texture: max(self.texture + rhs.texture, 0),
-            calories: max(self.calories + rhs.calories, 0),
-        }
-    }
-}
-
-fn make_combinations(range: &[i64], sum: i64, ingredients: usize) -> Vec<Vec<i64>> {
-    let mut combinations: Vec<Vec<i64>> = vec![];
-
-    //ugly but I dont want to worry about it
-    //my input has 4 ingredients and my test has 2 ingredients
-    //i gotta have 100 spoons of ingredients combined
-    if ingredients > 2 { 
-        for a in range {
-            for b in range {
-                for c in range {
-                    combinations.push(vec![*a, *b, *c, sum - (a + b + c)]);
-                }
-            }
-        }
-    }    
-    else{
-        for a in range {
-            combinations.push(vec![*a, sum - (a)]);
-        }
-    }    
-
-    combinations
-}
-
-fn find_optimal_recipe(input: &str, exact_calories: Option<i64>) -> i64 {
-    let ingredients: Vec<_> = input.lines().map(Ingredient::from_str).collect();
-
-    let combinations = make_combinations(&(1..100).collect::<Vec<i64>>(), 100, ingredients.len());
-
-    let mut best_score = 0;
-    let mut best_score_exact_calories = 0;
-
-    for combination in combinations.iter() {
-        let combination_ingredients = combination
-            .iter()
-            .enumerate()
-            .map(|(idx, perc)| (ingredients[idx].clone() * (*perc)))
-            .collect::<Vec<_>>();
-
-        let combination_sum: Ingredient = combination_ingredients
-            .iter()
-            .skip(1)
-            .fold(combination_ingredients[0].clone(), |acc, i| {
-                acc + i.to_owned()
-            });
-
-        // exact calories check
-        if let Some(calories) = exact_calories {
-            if combination_sum.calories == calories
-                && combination_sum.score() > best_score_exact_calories
-            {
-                best_score_exact_calories = combination_sum.score();
-            }
-        }
-
-        if combination_sum.score() > best_score {
-            best_score = combination_sum.score();
-        }
-    }
-
-    if exact_calories.is_none() {
-        best_score
-    } else {
-        best_score_exact_calories
-    }
-}
-
-#[aoc(day15, part1)]
-pub fn run(input: &str) -> String {
-    let res = find_optimal_recipe(input, None).to_string();
-
-    utils::save_answer(&res, "day15.1");
-
-    utils::submit_answer(2015, 15, "1", &res);
-
-    res
-}
-
-#[aoc(day15, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let res = find_optimal_recipe(input, Some(500)).to_string();
-
-    utils::save_answer(&res, "day15.2");
-
-    utils::submit_answer(2015, 15, "2", &res);
-
-    res
-}
-
-#[test]
-fn test_run() {
-    let input = r#"Butterscotch: capacity -1, durability -2, flavor 6, texture 3, calories 8
-Cinnamon: capacity 2, durability 3, flavor -2, texture -1, calories 3"#;
-
-    let recipe = find_optimal_recipe(input, None);
-
-    assert_eq!(recipe, 62_842_880);
-}
-
-#[test]
-fn test_run_pt2() {
-    let input = r#"Butterscotch: capacity -1, durability -2, flavor 6, texture 3, calories 8
-Cinnamon: capacity 2, durability 3, flavor -2, texture -1, calories 3"#;
-
-    let recipe = find_optimal_recipe(input, Some(500));
-
-    assert_eq!(recipe, 57_600_000);
-}
+<span>use std::cmp::max;</span>
+<span>use std::ops::{Add, Mul};</span>
+<span>use crate::utils;</span>
+<span>#[derive(Clone, Debug)]</span>
+<span>struct Ingredient {</span>
+<span>    name: String,</span>
+<span>    capacity: i64,</span>
+<span>    durability: i64,</span>
+<span>    flavor: i64,</span>
+<span>    texture: i64,</span>
+<span>    calories: i64,</span>
+<span>}</span>
+<span></span>
+<span>impl Ingredient {</span>
+<span>    fn from_str(s: &str) -> Self {</span>
+<span>        let words: Vec<_> = s.split_whitespace().collect();</span>
+<span>        Self {</span>
+<span>            name: words[0].trim_end_matches('.').to_owned(),</span>
+<span>            capacity: words[2].trim_end_matches(',').parse::<i64>().unwrap(),</span>
+<span>            durability: words[4].trim_end_matches(',').parse::<i64>().unwrap(),</span>
+<span>            flavor: words[6].trim_end_matches(',').parse::<i64>().unwrap(),</span>
+<span>            texture: words[8].trim_end_matches(',').parse::<i64>().unwrap(),</span>
+<span>            calories: words[10].trim_end_matches(',').parse::<i64>().unwrap(),</span>
+<span>        }</span>
+<span>    }</span>
+<span></span>
+<span>    fn score(&self) -> i64 {</span>
+<span>        self.capacity * self.durability * self.flavor * self.texture</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>impl Mul<i64> for Ingredient {</span>
+<span>    type Output = Self;</span>
+<span></span>
+<span>    fn mul(self, rhs: i64) -> Self {</span>
+<span>        Self {</span>
+<span>            name: self.name.clone(),</span>
+<span>            capacity: self.capacity * rhs,</span>
+<span>            durability: self.durability * rhs,</span>
+<span>            flavor: self.flavor * rhs,</span>
+<span>            texture: self.texture * rhs,</span>
+<span>            calories: self.calories * rhs,</span>
+<span>        }</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>impl Add for Ingredient {</span>
+<span>    type Output = Self;</span>
+<span></span>
+<span>    fn add(self, rhs: Self) -> Self {</span>
+<span>        Self {</span>
+<span>            name: self.name.clone(),</span>
+<span>            capacity: max(self.capacity + rhs.capacity, 0),</span>
+<span>            durability: max(self.durability + rhs.durability, 0),</span>
+<span>            flavor: max(self.flavor + rhs.flavor, 0),</span>
+<span>            texture: max(self.texture + rhs.texture, 0),</span>
+<span>            calories: max(self.calories + rhs.calories, 0),</span>
+<span>        }</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>fn make_combinations(range: &[i64], sum: i64, ingredients: usize) -> Vec<Vec<i64>> {</span>
+<span>    let mut combinations: Vec<Vec<i64>> = vec![];</span>
+<span></span>
+<span>    //ugly but I dont want to worry about it</span>
+<span>    //my input has 4 ingredients and my test has 2 ingredients</span>
+<span>    //i gotta have 100 spoons of ingredients combined</span>
+<span>    if ingredients > 2 { </span>
+<span>        for a in range {</span>
+<span>            for b in range {</span>
+<span>                for c in range {</span>
+<span>                    combinations.push(vec![*a, *b, *c, sum - (a + b + c)]);</span>
+<span>                }</span>
+<span>            }</span>
+<span>        }</span>
+<span>    }    </span>
+<span>    else{</span>
+<span>        for a in range {</span>
+<span>            combinations.push(vec![*a, sum - (a)]);</span>
+<span>        }</span>
+<span>    }    </span>
+<span></span>
+<span>    combinations</span>
+<span>}</span>
+<span></span>
+<span>fn find_optimal_recipe(input: &str, exact_calories: Option<i64>) -> i64 {</span>
+<span>    let ingredients: Vec<_> = input.lines().map(Ingredient::from_str).collect();</span>
+<span></span>
+<span>    let combinations = make_combinations(&(1..100).collect::<Vec<i64>>(), 100, ingredients.len());</span>
+<span></span>
+<span>    let mut best_score = 0;</span>
+<span>    let mut best_score_exact_calories = 0;</span>
+<span></span>
+<span>    for combination in combinations.iter() {</span>
+<span>        let combination_ingredients = combination</span>
+<span>            .iter()</span>
+<span>            .enumerate()</span>
+<span>            .map(|(idx, perc)| (ingredients[idx].clone() * (*perc)))</span>
+<span>            .collect::<Vec<_>>();</span>
+<span></span>
+<span>        let combination_sum: Ingredient = combination_ingredients</span>
+<span>            .iter()</span>
+<span>            .skip(1)</span>
+<span>            .fold(combination_ingredients[0].clone(), |acc, i| {</span>
+<span>                acc + i.to_owned()</span>
+<span>            });</span>
+<span></span>
+<span>        // exact calories check</span>
+<span>        if let Some(calories) = exact_calories {</span>
+<span>            if combination_sum.calories == calories</span>
+<span>                && combination_sum.score() > best_score_exact_calories</span>
+<span>            {</span>
+<span>                best_score_exact_calories = combination_sum.score();</span>
+<span>            }</span>
+<span>        }</span>
+<span></span>
+<span>        if combination_sum.score() > best_score {</span>
+<span>            best_score = combination_sum.score();</span>
+<span>        }</span>
+<span>    }</span>
+<span></span>
+<span>    if exact_calories.is_none() {</span>
+<span>        best_score</span>
+<span>    } else {</span>
+<span>        best_score_exact_calories</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day15, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let res = find_optimal_recipe(input, None).to_string();</span>
+<span></span>
+<span>    utils::save_answer(&res, "day15.1");</span>
+<span></span>
+<span>    utils::submit_answer(2015, 15, "1", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day15, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let res = find_optimal_recipe(input, Some(500)).to_string();</span>
+<span></span>
+<span>    utils::save_answer(&res, "day15.2");</span>
+<span></span>
+<span>    utils::submit_answer(2015, 15, "2", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test_run() {</span>
+<span>    let input = r#"Butterscotch: capacity -1, durability -2, flavor 6, texture 3, calories 8</span>
+<span>Cinnamon: capacity 2, durability 3, flavor -2, texture -1, calories 3"#;</span>
+<span></span>
+<span>    let recipe = find_optimal_recipe(input, None);</span>
+<span></span>
+<span>    assert_eq!(recipe, 62_842_880);</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test_run_pt2() {</span>
+<span>    let input = r#"Butterscotch: capacity -1, durability -2, flavor 6, texture 3, calories 8</span>
+<span>Cinnamon: capacity 2, durability 3, flavor -2, texture -1, calories 3"#;</span>
+<span></span>
+<span>    let recipe = find_optimal_recipe(input, Some(500));</span>
+<span></span>
+<span>    assert_eq!(recipe, 57_600_000);</span>
+<span>}</span>
 </pre>
