--- a/viewer/day22.html
+++ b/viewer/day22.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,263 +34,263 @@
 </div>
 <h1>Day 22</h1>
 <pre>
-use std::collections::HashMap;
-use std::iter::FromIterator;
-extern crate rand;
-use rand::prelude::*;
-extern crate rayon;
-use rayon::prelude::*;
-use crate::utils;
-use lazy_static::lazy_static;
-
-const BEST_OF: i32 = 1_000_000;
-
-lazy_static! {
-    static ref SPELL_COST: HashMap<Spell, i32> = HashMap::from_iter(vec![
-        (Spell::MagicMissile, 53),
-        (Spell::Drain, 73),
-        (Spell::Shield, 113),
-        (Spell::Poison, 173),
-        (Spell::Recharge, 229)
-    ]);
-    static ref ALL_SPELLS: Vec<Spell> = vec![
-        Spell::MagicMissile,
-        Spell::Drain,
-        Spell::Shield,
-        Spell::Poison,
-        Spell::Recharge
-    ];
-}
-
-#[derive(Hash, Eq, PartialEq, Clone)]
-enum Spell {
-    MagicMissile,
-    Drain,
-    Shield,
-    Poison,
-    Recharge,
-}
-
-enum Turn {
-    Player,
-    Boss,
-}
-
-fn fight(
-    player_hp: i32,
-    player_mana: i32,
-    boss_hp: i32,
-    boss_dmg: i32,
-    hard_mode: bool,
-) -> Option<i32> {
-    let mut player_hp = player_hp;
-    let mut player_mana = player_mana;
-    let mut boss_hp = boss_hp;
-
-    let mut mana_used = 0;
-
-    let mut turn = Turn::Player;
-
-    let mut shield_active = false;
-    let mut shield_count = 0;
-
-    let mut poison_active = false;
-    let mut poison_count = 0;
-
-    let mut recharge_active = false;
-    let mut recharge_count = 0;
-
-    let mut player_armor;
-
-    loop {
-        if shield_active {
-            player_armor = 7;
-            shield_count += 1;
-
-            if shield_count == 6 {
-                shield_active = false;
-            }
-        } else {
-            player_armor = 0;
-        }
-
-        if poison_active {
-            boss_hp -= 3;
-            if boss_hp <= 0 {
-                return Some(mana_used);
-            }
-            poison_count += 1;
-
-            if poison_count == 6 {
-                poison_active = false;
-            }
-        }
-
-        if recharge_active {
-            player_mana += 101;
-            recharge_count += 1;
-
-            if recharge_count == 5 {
-                recharge_active = false;
-            }
-        }
-
-        match turn {
-            Turn::Player => {
-                if hard_mode {
-                    player_hp -= 1;
-                    if player_hp <= 0 {
-                        return None;
-                    }
-                }
-
-                let mut all_spells = ALL_SPELLS.clone();
-                all_spells.shuffle(&mut rand::thread_rng());
-
-                let mut spell = None;
-
-                for s in all_spells {
-                    if player_mana >= SPELL_COST[&s] {
-                        if s == Spell::Shield && shield_active {
-                            continue;
-                        }
-                        if s == Spell::Poison && poison_active {
-                            continue;
-                        }
-                        if s == Spell::Recharge && recharge_active {
-                            continue;
-                        }
-
-                        spell = Some(s);
-                        break;
-                    }
-                }
-
-                spell.as_ref()?;
-                let spell = spell.unwrap();
-
-                player_mana -= SPELL_COST[&spell];
-                if player_mana < 0 {
-                    player_mana = 0;
-                }
-
-                mana_used += SPELL_COST[&spell];
-
-                match spell {
-                    Spell::MagicMissile => {
-                        boss_hp -= 4;
-                        if boss_hp <= 0 {
-                            return Some(mana_used);
-                        }
-                    }
-                    Spell::Drain => {
-                        boss_hp -= 2;
-                        if boss_hp <= 0 {
-                            return Some(mana_used);
-                        }
-                        player_hp += 2
-                    }
-                    Spell::Shield => {
-                        shield_active = true;
-                        shield_count = 0;
-                    }
-                    Spell::Poison => {
-                        poison_active = true;
-                        poison_count = 0;
-                    }
-                    Spell::Recharge => {
-                        recharge_active = true;
-                        recharge_count = 0;
-                    }
-                }
-
-                turn = Turn::Boss;
-            }
-            _ => {
-                let mut dmg = boss_dmg - player_armor;
-                if dmg < 1 {
-                    dmg = 1;
-                }
-
-                player_hp -= dmg;
-
-                if player_hp <= 0 {
-                    return None;
-                }
-
-                turn = Turn::Player;
-            }
-        }
-    }
-}
-
-fn get_boss_stats(input: &str) -> (i32, i32) {
-    let mut lines = input.lines();
-    let hp = lines
-        .next()
-        .map(|l| l.split(':').nth(1).unwrap().trim().parse::<i32>().unwrap())
-        .unwrap();
-    let damage = lines
-        .next()
-        .map(|l| l.split(':').nth(1).unwrap().trim().parse::<i32>().unwrap())
-        .unwrap();
-    (hp, damage)
-}
-
-#[aoc(day22, part1)]
-pub fn run(input: &str) -> String {
-    let boss = get_boss_stats(input);
-
-    let res = (0..BEST_OF)
-        .collect::<Vec<i32>>()
-        .par_iter()
-        .filter_map(|_| fight(50, 500, boss.0, boss.1, false))
-        .min()
-        .expect("Could not win any fight")
-        .to_string();
-
-    utils::solve(2015, 22, "1", &res);
-
-    res    
-}
-
-#[aoc(day22, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let boss = get_boss_stats(input);
-
-    let res = (0..BEST_OF)
-        .collect::<Vec<i32>>()
-        .par_iter()
-        .filter_map(|_| fight(50, 500, boss.0, boss.1, true))
-        .min()
-        .expect("Could not win any fight")
-        .to_string();
-
-    utils::solve(2015, 22, "2", &res);
-
-    res   
-}
-
-#[test]
-fn test() {
-    assert_eq!(
-        (0..BEST_OF)
-        .collect::<Vec<i32>>()
-        .par_iter()
-        .filter_map(|_| fight(10, 250, 13, 8, false))
-        .min()
-        .expect("played Poison + Magic Missile"), 
-        226
-    );
-
-    assert_eq!(
-        (0..BEST_OF)
-        .collect::<Vec<i32>>()
-        .par_iter()
-        .filter_map(|_| fight(10, 250, 14, 8, false))
-        .min()
-        .expect("played Recharge + Shield + Drain + Poison + Magic Missile"), 
-        641
-    );
-}
+<span>use std::collections::HashMap;</span>
+<span>use std::iter::FromIterator;</span>
+<span>extern crate rand;</span>
+<span>use rand::prelude::*;</span>
+<span>extern crate rayon;</span>
+<span>use rayon::prelude::*;</span>
+<span>use crate::utils;</span>
+<span>use lazy_static::lazy_static;</span>
+<span></span>
+<span>const BEST_OF: i32 = 1_000_000;</span>
+<span></span>
+<span>lazy_static! {</span>
+<span>    static ref SPELL_COST: HashMap<Spell, i32> = HashMap::from_iter(vec![</span>
+<span>        (Spell::MagicMissile, 53),</span>
+<span>        (Spell::Drain, 73),</span>
+<span>        (Spell::Shield, 113),</span>
+<span>        (Spell::Poison, 173),</span>
+<span>        (Spell::Recharge, 229)</span>
+<span>    ]);</span>
+<span>    static ref ALL_SPELLS: Vec<Spell> = vec![</span>
+<span>        Spell::MagicMissile,</span>
+<span>        Spell::Drain,</span>
+<span>        Spell::Shield,</span>
+<span>        Spell::Poison,</span>
+<span>        Spell::Recharge</span>
+<span>    ];</span>
+<span>}</span>
+<span></span>
+<span>#[derive(Hash, Eq, PartialEq, Clone)]</span>
+<span>enum Spell {</span>
+<span>    MagicMissile,</span>
+<span>    Drain,</span>
+<span>    Shield,</span>
+<span>    Poison,</span>
+<span>    Recharge,</span>
+<span>}</span>
+<span></span>
+<span>enum Turn {</span>
+<span>    Player,</span>
+<span>    Boss,</span>
+<span>}</span>
+<span></span>
+<span>fn fight(</span>
+<span>    player_hp: i32,</span>
+<span>    player_mana: i32,</span>
+<span>    boss_hp: i32,</span>
+<span>    boss_dmg: i32,</span>
+<span>    hard_mode: bool,</span>
+<span>) -> Option<i32> {</span>
+<span>    let mut player_hp = player_hp;</span>
+<span>    let mut player_mana = player_mana;</span>
+<span>    let mut boss_hp = boss_hp;</span>
+<span></span>
+<span>    let mut mana_used = 0;</span>
+<span></span>
+<span>    let mut turn = Turn::Player;</span>
+<span></span>
+<span>    let mut shield_active = false;</span>
+<span>    let mut shield_count = 0;</span>
+<span></span>
+<span>    let mut poison_active = false;</span>
+<span>    let mut poison_count = 0;</span>
+<span></span>
+<span>    let mut recharge_active = false;</span>
+<span>    let mut recharge_count = 0;</span>
+<span></span>
+<span>    let mut player_armor;</span>
+<span></span>
+<span>    loop {</span>
+<span>        if shield_active {</span>
+<span>            player_armor = 7;</span>
+<span>            shield_count += 1;</span>
+<span></span>
+<span>            if shield_count == 6 {</span>
+<span>                shield_active = false;</span>
+<span>            }</span>
+<span>        } else {</span>
+<span>            player_armor = 0;</span>
+<span>        }</span>
+<span></span>
+<span>        if poison_active {</span>
+<span>            boss_hp -= 3;</span>
+<span>            if boss_hp <= 0 {</span>
+<span>                return Some(mana_used);</span>
+<span>            }</span>
+<span>            poison_count += 1;</span>
+<span></span>
+<span>            if poison_count == 6 {</span>
+<span>                poison_active = false;</span>
+<span>            }</span>
+<span>        }</span>
+<span></span>
+<span>        if recharge_active {</span>
+<span>            player_mana += 101;</span>
+<span>            recharge_count += 1;</span>
+<span></span>
+<span>            if recharge_count == 5 {</span>
+<span>                recharge_active = false;</span>
+<span>            }</span>
+<span>        }</span>
+<span></span>
+<span>        match turn {</span>
+<span>            Turn::Player => {</span>
+<span>                if hard_mode {</span>
+<span>                    player_hp -= 1;</span>
+<span>                    if player_hp <= 0 {</span>
+<span>                        return None;</span>
+<span>                    }</span>
+<span>                }</span>
+<span></span>
+<span>                let mut all_spells = ALL_SPELLS.clone();</span>
+<span>                all_spells.shuffle(&mut rand::thread_rng());</span>
+<span></span>
+<span>                let mut spell = None;</span>
+<span></span>
+<span>                for s in all_spells {</span>
+<span>                    if player_mana >= SPELL_COST[&s] {</span>
+<span>                        if s == Spell::Shield && shield_active {</span>
+<span>                            continue;</span>
+<span>                        }</span>
+<span>                        if s == Spell::Poison && poison_active {</span>
+<span>                            continue;</span>
+<span>                        }</span>
+<span>                        if s == Spell::Recharge && recharge_active {</span>
+<span>                            continue;</span>
+<span>                        }</span>
+<span></span>
+<span>                        spell = Some(s);</span>
+<span>                        break;</span>
+<span>                    }</span>
+<span>                }</span>
+<span></span>
+<span>                spell.as_ref()?;</span>
+<span>                let spell = spell.unwrap();</span>
+<span></span>
+<span>                player_mana -= SPELL_COST[&spell];</span>
+<span>                if player_mana < 0 {</span>
+<span>                    player_mana = 0;</span>
+<span>                }</span>
+<span></span>
+<span>                mana_used += SPELL_COST[&spell];</span>
+<span></span>
+<span>                match spell {</span>
+<span>                    Spell::MagicMissile => {</span>
+<span>                        boss_hp -= 4;</span>
+<span>                        if boss_hp <= 0 {</span>
+<span>                            return Some(mana_used);</span>
+<span>                        }</span>
+<span>                    }</span>
+<span>                    Spell::Drain => {</span>
+<span>                        boss_hp -= 2;</span>
+<span>                        if boss_hp <= 0 {</span>
+<span>                            return Some(mana_used);</span>
+<span>                        }</span>
+<span>                        player_hp += 2</span>
+<span>                    }</span>
+<span>                    Spell::Shield => {</span>
+<span>                        shield_active = true;</span>
+<span>                        shield_count = 0;</span>
+<span>                    }</span>
+<span>                    Spell::Poison => {</span>
+<span>                        poison_active = true;</span>
+<span>                        poison_count = 0;</span>
+<span>                    }</span>
+<span>                    Spell::Recharge => {</span>
+<span>                        recharge_active = true;</span>
+<span>                        recharge_count = 0;</span>
+<span>                    }</span>
+<span>                }</span>
+<span></span>
+<span>                turn = Turn::Boss;</span>
+<span>            }</span>
+<span>            _ => {</span>
+<span>                let mut dmg = boss_dmg - player_armor;</span>
+<span>                if dmg < 1 {</span>
+<span>                    dmg = 1;</span>
+<span>                }</span>
+<span></span>
+<span>                player_hp -= dmg;</span>
+<span></span>
+<span>                if player_hp <= 0 {</span>
+<span>                    return None;</span>
+<span>                }</span>
+<span></span>
+<span>                turn = Turn::Player;</span>
+<span>            }</span>
+<span>        }</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>fn get_boss_stats(input: &str) -> (i32, i32) {</span>
+<span>    let mut lines = input.lines();</span>
+<span>    let hp = lines</span>
+<span>        .next()</span>
+<span>        .map(|l| l.split(':').nth(1).unwrap().trim().parse::<i32>().unwrap())</span>
+<span>        .unwrap();</span>
+<span>    let damage = lines</span>
+<span>        .next()</span>
+<span>        .map(|l| l.split(':').nth(1).unwrap().trim().parse::<i32>().unwrap())</span>
+<span>        .unwrap();</span>
+<span>    (hp, damage)</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day22, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let boss = get_boss_stats(input);</span>
+<span></span>
+<span>    let res = (0..BEST_OF)</span>
+<span>        .collect::<Vec<i32>>()</span>
+<span>        .par_iter()</span>
+<span>        .filter_map(|_| fight(50, 500, boss.0, boss.1, false))</span>
+<span>        .min()</span>
+<span>        .expect("Could not win any fight")</span>
+<span>        .to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 22, "1", &res);</span>
+<span></span>
+<span>    res    </span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day22, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let boss = get_boss_stats(input);</span>
+<span></span>
+<span>    let res = (0..BEST_OF)</span>
+<span>        .collect::<Vec<i32>>()</span>
+<span>        .par_iter()</span>
+<span>        .filter_map(|_| fight(50, 500, boss.0, boss.1, true))</span>
+<span>        .min()</span>
+<span>        .expect("Could not win any fight")</span>
+<span>        .to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 22, "2", &res);</span>
+<span></span>
+<span>    res   </span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test() {</span>
+<span>    assert_eq!(</span>
+<span>        (0..BEST_OF)</span>
+<span>        .collect::<Vec<i32>>()</span>
+<span>        .par_iter()</span>
+<span>        .filter_map(|_| fight(10, 250, 13, 8, false))</span>
+<span>        .min()</span>
+<span>        .expect("played Poison + Magic Missile"), </span>
+<span>        226</span>
+<span>    );</span>
+<span></span>
+<span>    assert_eq!(</span>
+<span>        (0..BEST_OF)</span>
+<span>        .collect::<Vec<i32>>()</span>
+<span>        .par_iter()</span>
+<span>        .filter_map(|_| fight(10, 250, 14, 8, false))</span>
+<span>        .min()</span>
+<span>        .expect("played Recharge + Shield + Drain + Poison + Magic Missile"), </span>
+<span>        641</span>
+<span>    );</span>
+<span>}</span>
 </pre>
