--- a/viewer/day24.html
+++ b/viewer/day24.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,56 +34,56 @@
 </div>
 <h1>Day 24</h1>
 <pre>
-use crate::utils;
-extern crate itertools;
-use itertools::{min, Itertools};
-
-fn compute_qe(presents: &[u128], num_groups: u128) -> u128 {
-    let presents_sum: u128 = presents.iter().sum::<u128>();
-    let group_size: u128 = presents_sum / num_groups;
-
-    for i in 0..group_size {
-        let qes: Vec<u128> = presents
-            .iter()
-            .cloned()
-            .combinations(i as usize)
-            .filter(|c| c.iter().sum::<u128>() == group_size)
-            .map(|c| c.iter().product())
-            .collect();
-
-        if !qes.is_empty() {
-            return min(qes).unwrap();
-        }
-    }
-
-    0
-}
-
-#[aoc(day24, part1)]
-pub fn run(input: &str) -> String {
-    let presents: Vec<u128> = input.lines().map(|l| l.parse::<u128>().unwrap()).collect();
-
-    let res = compute_qe(&presents, 3).to_string();
-
-    utils::solve(2015, 24, "1", &res);
-
-    res
-}
-
-#[aoc(day24, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let presents: Vec<u128> = input.lines().map(|l| l.parse::<u128>().unwrap()).collect();
-
-    let res = compute_qe(&presents, 4).to_string();
-
-    utils::solve(2015, 24, "2", &res);
-
-    res
-}
-
-#[test]
-fn test() {
-    assert_eq!(compute_qe(&[1, 2, 3, 4, 5, 7, 8, 9, 10, 11], 3), 99);
-}
-
+<span>use crate::utils;</span>
+<span>extern crate itertools;</span>
+<span>use itertools::{min, Itertools};</span>
+<span></span>
+<span>fn compute_qe(presents: &[u128], num_groups: u128) -> u128 {</span>
+<span>    let presents_sum: u128 = presents.iter().sum::<u128>();</span>
+<span>    let group_size: u128 = presents_sum / num_groups;</span>
+<span></span>
+<span>    for i in 0..group_size {</span>
+<span>        let qes: Vec<u128> = presents</span>
+<span>            .iter()</span>
+<span>            .cloned()</span>
+<span>            .combinations(i as usize)</span>
+<span>            .filter(|c| c.iter().sum::<u128>() == group_size)</span>
+<span>            .map(|c| c.iter().product())</span>
+<span>            .collect();</span>
+<span></span>
+<span>        if !qes.is_empty() {</span>
+<span>            return min(qes).unwrap();</span>
+<span>        }</span>
+<span>    }</span>
+<span></span>
+<span>    0</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day24, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let presents: Vec<u128> = input.lines().map(|l| l.parse::<u128>().unwrap()).collect();</span>
+<span></span>
+<span>    let res = compute_qe(&presents, 3).to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 24, "1", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day24, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let presents: Vec<u128> = input.lines().map(|l| l.parse::<u128>().unwrap()).collect();</span>
+<span></span>
+<span>    let res = compute_qe(&presents, 4).to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 24, "2", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test() {</span>
+<span>    assert_eq!(compute_qe(&[1, 2, 3, 4, 5, 7, 8, 9, 10, 11], 3), 99);</span>
+<span>}</span>
+<span></span>
 </pre>
