--- a/viewer/day7.html
+++ b/viewer/day7.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,225 +34,225 @@
 </div>
 <h1>Day 7</h1>
 <pre>
-extern crate regex;
-use crate::utils;
-use lazy_static::lazy_static;
-use regex::{Captures, Regex};
-use std::collections::HashMap;
-
-lazy_static! {
-    static ref ASSIGN_REGEX: Regex = Regex::new(r"^(\w+) -> (\w+)$").unwrap();
-    static ref AND_REGEX: Regex = Regex::new(r"^(\w+) AND (\w+) -> (\w+)$").unwrap();
-    static ref OR_REGEX: Regex = Regex::new(r"^(\w+) OR (\w+) -> (\w+)$").unwrap();
-    static ref NOT_REGEX: Regex = Regex::new(r"^NOT (\w+) -> (\w+)$").unwrap();
-    static ref LSHIFT_REGEX: Regex = Regex::new(r"^(\w+) LSHIFT (\d+) -> (\w+)$").unwrap();
-    static ref RSHIFT_REGEX: Regex = Regex::new(r"^(\w+) RSHIFT (\d+) -> (\w+)$").unwrap();
-}
-
-#[derive(Debug)]
-enum Operation {
-    Assign {
-        val: String,
-        signal: String,
-    },
-    And {
-        signal_s1: String,
-        signal_s2: String,
-        signal: String,
-    },
-    Or {
-        signal_s1: String,
-        signal_s2: String,
-        signal: String,
-    },
-    Not {
-        signal_s: String,
-        signal: String,
-    },
-    LShift {
-        signal_s: String,
-        val: u16,
-        signal: String,
-    },
-    RShift {
-        signal_s: String,
-        val: u16,
-        signal: String,
-    },
-}
-
-impl Operation {
-    fn from_str(s: &str) -> Operation {
-        let parse_params = |op: Captures| {
-            op.iter()
-                .skip(1)
-                .map(|c| c.unwrap().as_str().to_string())
-                .collect::<Vec<String>>()
-        };
-
-        if let Some(op) = ASSIGN_REGEX.captures(s) {
-            let params = parse_params(op);
-            Operation::Assign {
-                val: params[0].clone(),
-                signal: params[1].clone(),
-            }
-        } else if let Some(op) = AND_REGEX.captures(s) {
-            let params = parse_params(op);
-            Operation::And {
-                signal_s1: params[0].clone(),
-                signal_s2: params[1].clone(),
-                signal: params[2].clone(),
-            }
-        } else if let Some(op) = OR_REGEX.captures(s) {
-            let params = parse_params(op);
-            Operation::Or {
-                signal_s1: params[0].clone(),
-                signal_s2: params[1].clone(),
-                signal: params[2].clone(),
-            }
-        } else if let Some(op) = NOT_REGEX.captures(s) {
-            let params = parse_params(op);
-            Operation::Not {
-                signal_s: params[0].clone(),
-                signal: params[1].clone(),
-            }
-        } else if let Some(op) = LSHIFT_REGEX.captures(s) {
-            let params = parse_params(op);
-            Operation::LShift {
-                signal_s: params[0].clone(),
-                val: params[1].parse::<u16>().unwrap(),
-                signal: params[2].clone(),
-            }
-        } else if let Some(op) = RSHIFT_REGEX.captures(s) {
-            let params = parse_params(op);
-            Operation::RShift {
-                signal_s: params[0].clone(),
-                val: params[1].parse::<u16>().unwrap(),
-                signal: params[2].clone(),
-            }
-        } else {
-            panic!("Unparseable row{}", s);
-        }
-    }
-}
-
-fn get_value(
-    signal: &str,
-    signals: &HashMap<String, Operation>,
-    memo: &mut HashMap<String, u16>,
-) -> u16 {
-    {
-        if let Some(val) = memo.get(signal) {
-            return *val;
-        }
-    }
-
-    if let Ok(val) = signal.parse::<u16>() {
-        return val;
-    }
-
-    let operation = signals.get(signal).unwrap();
-
-    let value: u16;
-
-    match &operation {
-        Operation::Assign { val, .. } => value = get_value(val, signals, memo),
-        Operation::And {
-            signal_s1,
-            signal_s2,
-            ..
-        } => value = get_value(signal_s1, signals, memo) & get_value(signal_s2, signals, memo),
-        Operation::Or {
-            signal_s1,
-            signal_s2,
-            ..
-        } => value = get_value(signal_s1, signals, memo) | get_value(signal_s2, signals, memo),
-        Operation::Not { signal_s, .. } => value = !get_value(signal_s, signals, memo),
-        Operation::LShift { signal_s, val, .. } => {
-            value = get_value(signal_s, signals, memo) << *val
-        }
-        Operation::RShift { signal_s, val, .. } => {
-            value = get_value(signal_s, signals, memo) >> *val
-        }
-    };
-
-    memo.insert(signal.to_string(), value);
-
-    value
-}
-
-fn wire(input: &str) -> HashMap<String, u16> {
-    let lines = input.lines();
-    let operations = lines.map(|l| Operation::from_str(l));
-    let mut memo: HashMap<String, u16> = HashMap::new();
-
-    let mut signals: HashMap<String, Operation> = HashMap::new();
-
-    for operation in operations {
-        let signal = match &operation {
-            Operation::Assign { signal, .. } => signal.clone(),
-            Operation::And { signal, .. } => signal.clone(),
-            Operation::Or { signal, .. } => signal.clone(),
-            Operation::Not { signal, .. } => signal.clone(),
-            Operation::LShift { signal, .. } => signal.clone(),
-            Operation::RShift { signal, .. } => signal.clone(),
-        };
-
-        signals.insert(signal, operation);
-    }
-
-    signals
-        .iter()
-        .map(|(signal_key, _signal_operations)| {
-            (
-                signal_key.clone(),
-                get_value(signal_key, &signals, &mut memo),
-            )
-        })
-        .collect()
-}
-
-#[aoc(day7, part1)]
-pub fn run(input: &str) -> String {
-    let res = wire(input)["a"].to_string();
-
-    utils::save_answer(&res, "day7.1");
-
-    res
-}
-
-#[aoc(day7, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let a_signal = &run(input);
-
-    let input = input.replace("19138", a_signal); //replace b-signal with a-signal
-
-    let res = wire(&input)["a"].to_string();
-
-    utils::save_answer(&res, "day7.2");
-
-    res
-}
-
-#[test]
-fn test_run() {
-    let input = "123 -> x
-456 -> y
-x AND y -> d
-x OR y -> e
-x LSHIFT 2 -> f
-y RSHIFT 2 -> g
-NOT x -> h
-NOT y -> i";
-
-    assert_eq!(wire(input)["d"].to_string(), "72");
-    assert_eq!(wire(input)["e"].to_string(), "507");
-    assert_eq!(wire(input)["f"].to_string(), "492");
-    assert_eq!(wire(input)["g"].to_string(), "114");
-    assert_eq!(wire(input)["h"].to_string(), "65412");
-    assert_eq!(wire(input)["i"].to_string(), "65079");
-    assert_eq!(wire(input)["x"].to_string(), "123");
-    assert_eq!(wire(input)["y"].to_string(), "456");
-}
-
+<span>extern crate regex;</span>
+<span>use crate::utils;</span>
+<span>use lazy_static::lazy_static;</span>
+<span>use regex::{Captures, Regex};</span>
+<span>use std::collections::HashMap;</span>
+<span></span>
+<span>lazy_static! {</span>
+<span>    static ref ASSIGN_REGEX: Regex = Regex::new(r"^(\w+) -> (\w+)$").unwrap();</span>
+<span>    static ref AND_REGEX: Regex = Regex::new(r"^(\w+) AND (\w+) -> (\w+)$").unwrap();</span>
+<span>    static ref OR_REGEX: Regex = Regex::new(r"^(\w+) OR (\w+) -> (\w+)$").unwrap();</span>
+<span>    static ref NOT_REGEX: Regex = Regex::new(r"^NOT (\w+) -> (\w+)$").unwrap();</span>
+<span>    static ref LSHIFT_REGEX: Regex = Regex::new(r"^(\w+) LSHIFT (\d+) -> (\w+)$").unwrap();</span>
+<span>    static ref RSHIFT_REGEX: Regex = Regex::new(r"^(\w+) RSHIFT (\d+) -> (\w+)$").unwrap();</span>
+<span>}</span>
+<span></span>
+<span>#[derive(Debug)]</span>
+<span>enum Operation {</span>
+<span>    Assign {</span>
+<span>        val: String,</span>
+<span>        signal: String,</span>
+<span>    },</span>
+<span>    And {</span>
+<span>        signal_s1: String,</span>
+<span>        signal_s2: String,</span>
+<span>        signal: String,</span>
+<span>    },</span>
+<span>    Or {</span>
+<span>        signal_s1: String,</span>
+<span>        signal_s2: String,</span>
+<span>        signal: String,</span>
+<span>    },</span>
+<span>    Not {</span>
+<span>        signal_s: String,</span>
+<span>        signal: String,</span>
+<span>    },</span>
+<span>    LShift {</span>
+<span>        signal_s: String,</span>
+<span>        val: u16,</span>
+<span>        signal: String,</span>
+<span>    },</span>
+<span>    RShift {</span>
+<span>        signal_s: String,</span>
+<span>        val: u16,</span>
+<span>        signal: String,</span>
+<span>    },</span>
+<span>}</span>
+<span></span>
+<span>impl Operation {</span>
+<span>    fn from_str(s: &str) -> Operation {</span>
+<span>        let parse_params = |op: Captures| {</span>
+<span>            op.iter()</span>
+<span>                .skip(1)</span>
+<span>                .map(|c| c.unwrap().as_str().to_string())</span>
+<span>                .collect::<Vec<String>>()</span>
+<span>        };</span>
+<span></span>
+<span>        if let Some(op) = ASSIGN_REGEX.captures(s) {</span>
+<span>            let params = parse_params(op);</span>
+<span>            Operation::Assign {</span>
+<span>                val: params[0].clone(),</span>
+<span>                signal: params[1].clone(),</span>
+<span>            }</span>
+<span>        } else if let Some(op) = AND_REGEX.captures(s) {</span>
+<span>            let params = parse_params(op);</span>
+<span>            Operation::And {</span>
+<span>                signal_s1: params[0].clone(),</span>
+<span>                signal_s2: params[1].clone(),</span>
+<span>                signal: params[2].clone(),</span>
+<span>            }</span>
+<span>        } else if let Some(op) = OR_REGEX.captures(s) {</span>
+<span>            let params = parse_params(op);</span>
+<span>            Operation::Or {</span>
+<span>                signal_s1: params[0].clone(),</span>
+<span>                signal_s2: params[1].clone(),</span>
+<span>                signal: params[2].clone(),</span>
+<span>            }</span>
+<span>        } else if let Some(op) = NOT_REGEX.captures(s) {</span>
+<span>            let params = parse_params(op);</span>
+<span>            Operation::Not {</span>
+<span>                signal_s: params[0].clone(),</span>
+<span>                signal: params[1].clone(),</span>
+<span>            }</span>
+<span>        } else if let Some(op) = LSHIFT_REGEX.captures(s) {</span>
+<span>            let params = parse_params(op);</span>
+<span>            Operation::LShift {</span>
+<span>                signal_s: params[0].clone(),</span>
+<span>                val: params[1].parse::<u16>().unwrap(),</span>
+<span>                signal: params[2].clone(),</span>
+<span>            }</span>
+<span>        } else if let Some(op) = RSHIFT_REGEX.captures(s) {</span>
+<span>            let params = parse_params(op);</span>
+<span>            Operation::RShift {</span>
+<span>                signal_s: params[0].clone(),</span>
+<span>                val: params[1].parse::<u16>().unwrap(),</span>
+<span>                signal: params[2].clone(),</span>
+<span>            }</span>
+<span>        } else {</span>
+<span>            panic!("Unparseable row{}", s);</span>
+<span>        }</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>fn get_value(</span>
+<span>    signal: &str,</span>
+<span>    signals: &HashMap<String, Operation>,</span>
+<span>    memo: &mut HashMap<String, u16>,</span>
+<span>) -> u16 {</span>
+<span>    {</span>
+<span>        if let Some(val) = memo.get(signal) {</span>
+<span>            return *val;</span>
+<span>        }</span>
+<span>    }</span>
+<span></span>
+<span>    if let Ok(val) = signal.parse::<u16>() {</span>
+<span>        return val;</span>
+<span>    }</span>
+<span></span>
+<span>    let operation = signals.get(signal).unwrap();</span>
+<span></span>
+<span>    let value: u16;</span>
+<span></span>
+<span>    match &operation {</span>
+<span>        Operation::Assign { val, .. } => value = get_value(val, signals, memo),</span>
+<span>        Operation::And {</span>
+<span>            signal_s1,</span>
+<span>            signal_s2,</span>
+<span>            ..</span>
+<span>        } => value = get_value(signal_s1, signals, memo) & get_value(signal_s2, signals, memo),</span>
+<span>        Operation::Or {</span>
+<span>            signal_s1,</span>
+<span>            signal_s2,</span>
+<span>            ..</span>
+<span>        } => value = get_value(signal_s1, signals, memo) | get_value(signal_s2, signals, memo),</span>
+<span>        Operation::Not { signal_s, .. } => value = !get_value(signal_s, signals, memo),</span>
+<span>        Operation::LShift { signal_s, val, .. } => {</span>
+<span>            value = get_value(signal_s, signals, memo) << *val</span>
+<span>        }</span>
+<span>        Operation::RShift { signal_s, val, .. } => {</span>
+<span>            value = get_value(signal_s, signals, memo) >> *val</span>
+<span>        }</span>
+<span>    };</span>
+<span></span>
+<span>    memo.insert(signal.to_string(), value);</span>
+<span></span>
+<span>    value</span>
+<span>}</span>
+<span></span>
+<span>fn wire(input: &str) -> HashMap<String, u16> {</span>
+<span>    let lines = input.lines();</span>
+<span>    let operations = lines.map(|l| Operation::from_str(l));</span>
+<span>    let mut memo: HashMap<String, u16> = HashMap::new();</span>
+<span></span>
+<span>    let mut signals: HashMap<String, Operation> = HashMap::new();</span>
+<span></span>
+<span>    for operation in operations {</span>
+<span>        let signal = match &operation {</span>
+<span>            Operation::Assign { signal, .. } => signal.clone(),</span>
+<span>            Operation::And { signal, .. } => signal.clone(),</span>
+<span>            Operation::Or { signal, .. } => signal.clone(),</span>
+<span>            Operation::Not { signal, .. } => signal.clone(),</span>
+<span>            Operation::LShift { signal, .. } => signal.clone(),</span>
+<span>            Operation::RShift { signal, .. } => signal.clone(),</span>
+<span>        };</span>
+<span></span>
+<span>        signals.insert(signal, operation);</span>
+<span>    }</span>
+<span></span>
+<span>    signals</span>
+<span>        .iter()</span>
+<span>        .map(|(signal_key, _signal_operations)| {</span>
+<span>            (</span>
+<span>                signal_key.clone(),</span>
+<span>                get_value(signal_key, &signals, &mut memo),</span>
+<span>            )</span>
+<span>        })</span>
+<span>        .collect()</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day7, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let res = wire(input)["a"].to_string();</span>
+<span></span>
+<span>    utils::save_answer(&res, "day7.1");</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day7, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let a_signal = &run(input);</span>
+<span></span>
+<span>    let input = input.replace("19138", a_signal); //replace b-signal with a-signal</span>
+<span></span>
+<span>    let res = wire(&input)["a"].to_string();</span>
+<span></span>
+<span>    utils::save_answer(&res, "day7.2");</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test_run() {</span>
+<span>    let input = "123 -> x</span>
+<span>456 -> y</span>
+<span>x AND y -> d</span>
+<span>x OR y -> e</span>
+<span>x LSHIFT 2 -> f</span>
+<span>y RSHIFT 2 -> g</span>
+<span>NOT x -> h</span>
+<span>NOT y -> i";</span>
+<span></span>
+<span>    assert_eq!(wire(input)["d"].to_string(), "72");</span>
+<span>    assert_eq!(wire(input)["e"].to_string(), "507");</span>
+<span>    assert_eq!(wire(input)["f"].to_string(), "492");</span>
+<span>    assert_eq!(wire(input)["g"].to_string(), "114");</span>
+<span>    assert_eq!(wire(input)["h"].to_string(), "65412");</span>
+<span>    assert_eq!(wire(input)["i"].to_string(), "65079");</span>
+<span>    assert_eq!(wire(input)["x"].to_string(), "123");</span>
+<span>    assert_eq!(wire(input)["y"].to_string(), "456");</span>
+<span>}</span>
+<span></span>
 </pre>
