--- a/viewer/day12.html
+++ b/viewer/day12.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,98 +34,98 @@
 </div>
 <h1>Day 12</h1>
 <pre>
-extern crate serde_json;
-use crate::utils;
-use serde_json::value::Value;
-
-fn get_value(value: Value) -> i64 {
-    match value {
-        Value::Array(vals) => vals.iter().cloned().map(get_value).sum(),
-        Value::Object(vals) => vals.values().cloned().map(get_value).sum(),
-        Value::Number(val) => val.as_i64().unwrap(),
-        _ => 0,
-    }
-}
-
-fn get_value_without_reds(value: Value) -> i64 {
-    match value {
-        Value::Array(vals) => vals.iter().cloned().map(get_value_without_reds).sum(),
-        Value::Object(vals) => {
-            let has_any_red = vals.values().cloned().any(|v| match v {
-                Value::String(str_v) => str_v == "red",
-                _ => false,
-            });
-
-            if has_any_red {
-                0
-            } else {
-                vals.values().cloned().map(get_value_without_reds).sum()
-            }
-        }
-        Value::Number(val) => val.as_i64().unwrap(),
-        _ => 0,
-    }
-}
-
-#[aoc(day12, part1)]
-pub fn run(input: &str) -> String {
-    let json: Value = serde_json::from_str(input).unwrap();
-
-    let res = get_value(json).to_string();
-
-    utils::save_answer(&res, "day12.1");
-
-    res
-}
-
-#[aoc(day12, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let json: Value = serde_json::from_str(input).unwrap();
-
-    let res = get_value_without_reds(json).to_string();
-
-    utils::save_answer(&res, "day12.2");
-
-    res
-}
-
-#[test]
-fn test_run() {
-    let json: Value = serde_json::from_str(r#"[1,2,3]"#).unwrap();
-    assert_eq!(get_value(json), 6);
-
-    let json: Value = serde_json::from_str(r#"{"a":2,"b":4}"#).unwrap();
-    assert_eq!(get_value(json), 6);
-
-    let json: Value = serde_json::from_str(r#"[[[3]]]"#).unwrap();
-    assert_eq!(get_value(json), 3);
-
-    let json: Value = serde_json::from_str(r#"{"a":{"b":4},"c":-1}"#).unwrap();
-    assert_eq!(get_value(json), 3);
-
-    let json: Value = serde_json::from_str(r#"{"a":[-1,1]}"#).unwrap();
-    assert_eq!(get_value(json), 0);
-
-    let json: Value = serde_json::from_str(r#"[]"#).unwrap();
-    assert_eq!(get_value(json), 0);
-
-    let json: Value = serde_json::from_str(r#"{}"#).unwrap();
-    assert_eq!(get_value(json), 0);
-}
-
-#[test]
-fn test_run_pt2() {
-    let json: Value = serde_json::from_str(r#"[1,2,3]"#).unwrap();
-    assert_eq!(get_value_without_reds(json), 6);
-
-    let json: Value = serde_json::from_str(r#"[1,{"c":"red","b":2},3]"#).unwrap();
-    assert_eq!(get_value_without_reds(json), 4);
-
-    let json: Value = serde_json::from_str(r#"{"d":"red","e":[1,2,3,4],"f":5}"#).unwrap();
-    assert_eq!(get_value_without_reds(json), 0);
-
-    let json: Value = serde_json::from_str(r#"[1,"red",5]"#).unwrap();
-    assert_eq!(get_value_without_reds(json), 6);
-}
-
+<span>extern crate serde_json;</span>
+<span>use crate::utils;</span>
+<span>use serde_json::value::Value;</span>
+<span></span>
+<span>fn get_value(value: Value) -> i64 {</span>
+<span>    match value {</span>
+<span>        Value::Array(vals) => vals.iter().cloned().map(get_value).sum(),</span>
+<span>        Value::Object(vals) => vals.values().cloned().map(get_value).sum(),</span>
+<span>        Value::Number(val) => val.as_i64().unwrap(),</span>
+<span>        _ => 0,</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>fn get_value_without_reds(value: Value) -> i64 {</span>
+<span>    match value {</span>
+<span>        Value::Array(vals) => vals.iter().cloned().map(get_value_without_reds).sum(),</span>
+<span>        Value::Object(vals) => {</span>
+<span>            let has_any_red = vals.values().cloned().any(|v| match v {</span>
+<span>                Value::String(str_v) => str_v == "red",</span>
+<span>                _ => false,</span>
+<span>            });</span>
+<span></span>
+<span>            if has_any_red {</span>
+<span>                0</span>
+<span>            } else {</span>
+<span>                vals.values().cloned().map(get_value_without_reds).sum()</span>
+<span>            }</span>
+<span>        }</span>
+<span>        Value::Number(val) => val.as_i64().unwrap(),</span>
+<span>        _ => 0,</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day12, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let json: Value = serde_json::from_str(input).unwrap();</span>
+<span></span>
+<span>    let res = get_value(json).to_string();</span>
+<span></span>
+<span>    utils::save_answer(&res, "day12.1");</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day12, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let json: Value = serde_json::from_str(input).unwrap();</span>
+<span></span>
+<span>    let res = get_value_without_reds(json).to_string();</span>
+<span></span>
+<span>    utils::save_answer(&res, "day12.2");</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test_run() {</span>
+<span>    let json: Value = serde_json::from_str(r#"[1,2,3]"#).unwrap();</span>
+<span>    assert_eq!(get_value(json), 6);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"{"a":2,"b":4}"#).unwrap();</span>
+<span>    assert_eq!(get_value(json), 6);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"[[[3]]]"#).unwrap();</span>
+<span>    assert_eq!(get_value(json), 3);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"{"a":{"b":4},"c":-1}"#).unwrap();</span>
+<span>    assert_eq!(get_value(json), 3);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"{"a":[-1,1]}"#).unwrap();</span>
+<span>    assert_eq!(get_value(json), 0);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"[]"#).unwrap();</span>
+<span>    assert_eq!(get_value(json), 0);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"{}"#).unwrap();</span>
+<span>    assert_eq!(get_value(json), 0);</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test_run_pt2() {</span>
+<span>    let json: Value = serde_json::from_str(r#"[1,2,3]"#).unwrap();</span>
+<span>    assert_eq!(get_value_without_reds(json), 6);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"[1,{"c":"red","b":2},3]"#).unwrap();</span>
+<span>    assert_eq!(get_value_without_reds(json), 4);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"{"d":"red","e":[1,2,3,4],"f":5}"#).unwrap();</span>
+<span>    assert_eq!(get_value_without_reds(json), 0);</span>
+<span></span>
+<span>    let json: Value = serde_json::from_str(r#"[1,"red",5]"#).unwrap();</span>
+<span>    assert_eq!(get_value_without_reds(json), 6);</span>
+<span>}</span>
+<span></span>
 </pre>
