--- a/viewer/day16.html
+++ b/viewer/day16.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,176 +34,176 @@
 </div>
 <h1>Day 16</h1>
 <pre>
-use std::collections::HashMap;
-use crate::utils;
-extern crate regex;
-use regex::Regex;
-use lazy_static::lazy_static;
-use std::iter::FromIterator;
-
-const MFCSAM_MESSAGE: &str = r#"children: 3
-cats: 7
-samoyeds: 2
-pomeranians: 3
-akitas: 0
-vizslas: 0
-goldfish: 5
-trees: 3
-cars: 2
-perfumes: 1"#;
-
-lazy_static! {
-    static ref AUNT_REGEX: Regex =
-        Regex::new(r"^Sue (\d+): (\w+): (\d+), (\w+): (\d+), (\w+): (\d+)$").unwrap();
-}
-
-type Aunt = HashMap<String, i32>;
-type Aunts = Vec<Aunt>;
-type MFCSAMMessage = HashMap<String, i32>;
-
-fn register_aunts(input: &[&str]) -> Aunts {
-    let mut aunts = vec![];
-
-    for aunt_raw in input {
-        if let Some(aunt_props) = AUNT_REGEX.captures(aunt_raw) {
-            let aunt_props = aunt_props
-                .iter()
-                .skip(1)
-                .map(|c| c.unwrap().as_str().to_string())
-                .collect::<Vec<String>>();
-
-            aunts.push(HashMap::from_iter(vec![
-                ("number".to_owned(), aunt_props[0].parse::<i32>().unwrap()),
-                (
-                    aunt_props[1].to_owned(),
-                    aunt_props[2].parse::<i32>().unwrap(),
-                ),
-                (
-                    aunt_props[3].to_owned(),
-                    aunt_props[4].parse::<i32>().unwrap(),
-                ),
-                (
-                    aunt_props[5].to_owned(),
-                    aunt_props[6].parse::<i32>().unwrap(),
-                ),
-            ]));
-        }
-    }
-
-    aunts
-}
-
-fn register_mfcsam_message(input: &[&str]) -> MFCSAMMessage {
-    let mut message = HashMap::new();
-
-    for item in input {
-        let words: Vec<_> = item.split_whitespace().collect();
-        message.insert(
-            words[0].trim_end_matches(':').to_owned(),
-            words[1].parse::<i32>().unwrap(),
-        );
-    }
-
-    message
-}
-
-fn match_aunt_exact(aunts: &Aunts, mfcsam_message: &MFCSAMMessage) -> Option<Aunt> {
-    aunts
-        .iter()
-        .find(|aunt| {
-            for (prop_name, prop_val) in aunt.iter() {
-                if prop_name == "number" {
-                    continue;
-                }
-
-                if let Some(message_val) = mfcsam_message.get(prop_name) {
-                    if message_val != prop_val {
-                        return false;
-                    }
-                } else {
-                    return false;
-                }
-            }
-
-            true
-        })
-        .cloned()
-}
-
-fn match_aunt_by_range(aunts: &Aunts, mfcsam_message: &MFCSAMMessage) -> Option<Aunt> {
-    aunts
-        .iter()
-        .find(|aunt| {
-            for (prop_name, prop_val) in aunt.iter() {
-                if prop_name == "number" {
-                    continue;
-                }
-
-                if let Some(message_val) = mfcsam_message.get(prop_name) {
-                    match prop_name.as_ref() {
-                        "cats" | "trees" => {
-                            if prop_val <= message_val {
-                                return false;
-                            }
-                        }
-                        "pomeranians" | "goldfish" => {
-                            if prop_val >= message_val {
-                                return false;
-                            }
-                        }
-                        _ => {
-                            if message_val != prop_val {
-                                return false;
-                            }
-                        }
-                    }
-                } else {
-                    return false;
-                }
-            }
-
-            true
-        })
-        .cloned()
-}
-
-struct Setup{
-    aunts: Aunts, 
-    mfcsam_message: MFCSAMMessage
-}
-
-fn setup_crime_scene(input: &str) -> Setup {
-    let aunts = register_aunts(&input.lines().collect::<Vec<_>>());
-
-    let mfcsam_message = register_mfcsam_message(&MFCSAM_MESSAGE.lines().collect::<Vec<_>>());
-
-    Setup {
-        aunts,
-        mfcsam_message
-    }
-}
-
-#[aoc(day16, part1)]
-pub fn run(input: &str) -> String {
-    let setup = setup_crime_scene(input);
-
-    let res = match_aunt_exact(&setup.aunts, &setup.mfcsam_message).unwrap()["number"].to_string();
-
-    utils::solve(2015, 16, "1", &res);
-
-    res
-}
-
-#[aoc(day16, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let setup = setup_crime_scene(input);
-    
-    let res = match_aunt_by_range(&setup.aunts, &setup.mfcsam_message).unwrap()["number"].to_string();
-
-    utils::solve(2015, 16, "2", &res);
-
-    res
-}
-
-//no tests this day ¯\_(ツ)_/¯
+<span>use std::collections::HashMap;</span>
+<span>use crate::utils;</span>
+<span>extern crate regex;</span>
+<span>use regex::Regex;</span>
+<span>use lazy_static::lazy_static;</span>
+<span>use std::iter::FromIterator;</span>
+<span></span>
+<span>const MFCSAM_MESSAGE: &str = r#"children: 3</span>
+<span>cats: 7</span>
+<span>samoyeds: 2</span>
+<span>pomeranians: 3</span>
+<span>akitas: 0</span>
+<span>vizslas: 0</span>
+<span>goldfish: 5</span>
+<span>trees: 3</span>
+<span>cars: 2</span>
+<span>perfumes: 1"#;</span>
+<span></span>
+<span>lazy_static! {</span>
+<span>    static ref AUNT_REGEX: Regex =</span>
+<span>        Regex::new(r"^Sue (\d+): (\w+): (\d+), (\w+): (\d+), (\w+): (\d+)$").unwrap();</span>
+<span>}</span>
+<span></span>
+<span>type Aunt = HashMap<String, i32>;</span>
+<span>type Aunts = Vec<Aunt>;</span>
+<span>type MFCSAMMessage = HashMap<String, i32>;</span>
+<span></span>
+<span>fn register_aunts(input: &[&str]) -> Aunts {</span>
+<span>    let mut aunts = vec![];</span>
+<span></span>
+<span>    for aunt_raw in input {</span>
+<span>        if let Some(aunt_props) = AUNT_REGEX.captures(aunt_raw) {</span>
+<span>            let aunt_props = aunt_props</span>
+<span>                .iter()</span>
+<span>                .skip(1)</span>
+<span>                .map(|c| c.unwrap().as_str().to_string())</span>
+<span>                .collect::<Vec<String>>();</span>
+<span></span>
+<span>            aunts.push(HashMap::from_iter(vec![</span>
+<span>                ("number".to_owned(), aunt_props[0].parse::<i32>().unwrap()),</span>
+<span>                (</span>
+<span>                    aunt_props[1].to_owned(),</span>
+<span>                    aunt_props[2].parse::<i32>().unwrap(),</span>
+<span>                ),</span>
+<span>                (</span>
+<span>                    aunt_props[3].to_owned(),</span>
+<span>                    aunt_props[4].parse::<i32>().unwrap(),</span>
+<span>                ),</span>
+<span>                (</span>
+<span>                    aunt_props[5].to_owned(),</span>
+<span>                    aunt_props[6].parse::<i32>().unwrap(),</span>
+<span>                ),</span>
+<span>            ]));</span>
+<span>        }</span>
+<span>    }</span>
+<span></span>
+<span>    aunts</span>
+<span>}</span>
+<span></span>
+<span>fn register_mfcsam_message(input: &[&str]) -> MFCSAMMessage {</span>
+<span>    let mut message = HashMap::new();</span>
+<span></span>
+<span>    for item in input {</span>
+<span>        let words: Vec<_> = item.split_whitespace().collect();</span>
+<span>        message.insert(</span>
+<span>            words[0].trim_end_matches(':').to_owned(),</span>
+<span>            words[1].parse::<i32>().unwrap(),</span>
+<span>        );</span>
+<span>    }</span>
+<span></span>
+<span>    message</span>
+<span>}</span>
+<span></span>
+<span>fn match_aunt_exact(aunts: &Aunts, mfcsam_message: &MFCSAMMessage) -> Option<Aunt> {</span>
+<span>    aunts</span>
+<span>        .iter()</span>
+<span>        .find(|aunt| {</span>
+<span>            for (prop_name, prop_val) in aunt.iter() {</span>
+<span>                if prop_name == "number" {</span>
+<span>                    continue;</span>
+<span>                }</span>
+<span></span>
+<span>                if let Some(message_val) = mfcsam_message.get(prop_name) {</span>
+<span>                    if message_val != prop_val {</span>
+<span>                        return false;</span>
+<span>                    }</span>
+<span>                } else {</span>
+<span>                    return false;</span>
+<span>                }</span>
+<span>            }</span>
+<span></span>
+<span>            true</span>
+<span>        })</span>
+<span>        .cloned()</span>
+<span>}</span>
+<span></span>
+<span>fn match_aunt_by_range(aunts: &Aunts, mfcsam_message: &MFCSAMMessage) -> Option<Aunt> {</span>
+<span>    aunts</span>
+<span>        .iter()</span>
+<span>        .find(|aunt| {</span>
+<span>            for (prop_name, prop_val) in aunt.iter() {</span>
+<span>                if prop_name == "number" {</span>
+<span>                    continue;</span>
+<span>                }</span>
+<span></span>
+<span>                if let Some(message_val) = mfcsam_message.get(prop_name) {</span>
+<span>                    match prop_name.as_ref() {</span>
+<span>                        "cats" | "trees" => {</span>
+<span>                            if prop_val <= message_val {</span>
+<span>                                return false;</span>
+<span>                            }</span>
+<span>                        }</span>
+<span>                        "pomeranians" | "goldfish" => {</span>
+<span>                            if prop_val >= message_val {</span>
+<span>                                return false;</span>
+<span>                            }</span>
+<span>                        }</span>
+<span>                        _ => {</span>
+<span>                            if message_val != prop_val {</span>
+<span>                                return false;</span>
+<span>                            }</span>
+<span>                        }</span>
+<span>                    }</span>
+<span>                } else {</span>
+<span>                    return false;</span>
+<span>                }</span>
+<span>            }</span>
+<span></span>
+<span>            true</span>
+<span>        })</span>
+<span>        .cloned()</span>
+<span>}</span>
+<span></span>
+<span>struct Setup{</span>
+<span>    aunts: Aunts, </span>
+<span>    mfcsam_message: MFCSAMMessage</span>
+<span>}</span>
+<span></span>
+<span>fn setup_crime_scene(input: &str) -> Setup {</span>
+<span>    let aunts = register_aunts(&input.lines().collect::<Vec<_>>());</span>
+<span></span>
+<span>    let mfcsam_message = register_mfcsam_message(&MFCSAM_MESSAGE.lines().collect::<Vec<_>>());</span>
+<span></span>
+<span>    Setup {</span>
+<span>        aunts,</span>
+<span>        mfcsam_message</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day16, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let setup = setup_crime_scene(input);</span>
+<span></span>
+<span>    let res = match_aunt_exact(&setup.aunts, &setup.mfcsam_message).unwrap()["number"].to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 16, "1", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day16, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let setup = setup_crime_scene(input);</span>
+<span>    </span>
+<span>    let res = match_aunt_by_range(&setup.aunts, &setup.mfcsam_message).unwrap()["number"].to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 16, "2", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>//no tests this day ¯\_(ツ)_/¯</span>
 </pre>
