--- a/viewer/day17.html
+++ b/viewer/day17.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,71 +34,71 @@
 </div>
 <h1>Day 17</h1>
 <pre>
-use crate::utils;
-extern crate permutator;
-use permutator::Combination;
-use std::collections::HashSet;
-
-fn put_eggnod_in_containers(liters: i32, container_sizes: &[i32]) -> HashSet<Vec<(usize, i32)>> {
-    let container_sizes: Vec<_> = container_sizes.iter().copied().enumerate().collect();
-
-    let mut combinations = HashSet::new();
-
-    for n in 1..=container_sizes.len() {
-        for combination in container_sizes.combination(n) {
-            let sum: i32 = combination.iter().map(|c| c.1).sum();
-            if sum == liters {
-                combinations.insert(combination);
-            }
-        }
-    }
-
-    combinations
-        .into_iter()
-        .map(|v| v.into_iter().copied().collect())
-        .collect()
-}
-
-fn put_eggnod_in_containers_minimum(liters: i32, container_sizes: &[i32]) -> usize {
-    let combinations = put_eggnod_in_containers(liters, container_sizes);
-
-    let min_containers = combinations.iter().map(|c| c.len()).min().unwrap();
-    combinations
-        .iter()
-        .filter(|c| c.len() == min_containers)
-        .count()
-}
-
-#[aoc(day17, part1)]
-pub fn run(input: &str) -> String {
-    let container_sizes: Vec<_> = input.lines().map(|l| l.parse::<i32>().unwrap()).collect();
-    
-    let res = put_eggnod_in_containers(150, &container_sizes).len().to_string();
-
-    utils::solve(2015, 17, "1", &res);
-
-    res
-}
-
-#[aoc(day17, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let container_sizes: Vec<_> = input.lines().map(|l| l.parse::<i32>().unwrap()).collect();
-
-    let res = put_eggnod_in_containers_minimum(150, &container_sizes).to_string();
-
-    utils::solve(2015, 17, "2", &res);
-
-    res
-}
-
-#[test]
-fn test_run() {
-    assert_eq!(put_eggnod_in_containers(25, &[20, 15, 10, 5, 5]).len(), 4);
-}
-
-#[test]
-fn test_run_pt2() {
-    assert_eq!(put_eggnod_in_containers_minimum(25, &[20, 15, 10, 5, 5]), 3);
-}
-
+<span>use crate::utils;</span>
+<span>extern crate permutator;</span>
+<span>use permutator::Combination;</span>
+<span>use std::collections::HashSet;</span>
+<span></span>
+<span>fn put_eggnod_in_containers(liters: i32, container_sizes: &[i32]) -> HashSet<Vec<(usize, i32)>> {</span>
+<span>    let container_sizes: Vec<_> = container_sizes.iter().copied().enumerate().collect();</span>
+<span></span>
+<span>    let mut combinations = HashSet::new();</span>
+<span></span>
+<span>    for n in 1..=container_sizes.len() {</span>
+<span>        for combination in container_sizes.combination(n) {</span>
+<span>            let sum: i32 = combination.iter().map(|c| c.1).sum();</span>
+<span>            if sum == liters {</span>
+<span>                combinations.insert(combination);</span>
+<span>            }</span>
+<span>        }</span>
+<span>    }</span>
+<span></span>
+<span>    combinations</span>
+<span>        .into_iter()</span>
+<span>        .map(|v| v.into_iter().copied().collect())</span>
+<span>        .collect()</span>
+<span>}</span>
+<span></span>
+<span>fn put_eggnod_in_containers_minimum(liters: i32, container_sizes: &[i32]) -> usize {</span>
+<span>    let combinations = put_eggnod_in_containers(liters, container_sizes);</span>
+<span></span>
+<span>    let min_containers = combinations.iter().map(|c| c.len()).min().unwrap();</span>
+<span>    combinations</span>
+<span>        .iter()</span>
+<span>        .filter(|c| c.len() == min_containers)</span>
+<span>        .count()</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day17, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let container_sizes: Vec<_> = input.lines().map(|l| l.parse::<i32>().unwrap()).collect();</span>
+<span>    </span>
+<span>    let res = put_eggnod_in_containers(150, &container_sizes).len().to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 17, "1", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day17, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let container_sizes: Vec<_> = input.lines().map(|l| l.parse::<i32>().unwrap()).collect();</span>
+<span></span>
+<span>    let res = put_eggnod_in_containers_minimum(150, &container_sizes).to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 17, "2", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test_run() {</span>
+<span>    assert_eq!(put_eggnod_in_containers(25, &[20, 15, 10, 5, 5]).len(), 4);</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test_run_pt2() {</span>
+<span>    assert_eq!(put_eggnod_in_containers_minimum(25, &[20, 15, 10, 5, 5]), 3);</span>
+<span>}</span>
+<span></span>
 </pre>
