--- a/viewer/day23.html
+++ b/viewer/day23.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,158 +34,158 @@
 </div>
 <h1>Day 23</h1>
 <pre>
-use std::collections::HashMap;
-use crate::utils;
-use std::iter::FromIterator;
-
-#[derive(Debug, Hash, Eq, PartialEq)]
-enum Register {
-    A,
-    B,
-}
-
-impl Register {
-    fn from_str(r: &str) -> Self {
-        if r.trim_matches(',') == "a" {
-            Register::A
-        } else {
-            Register::B
-        }
-    }
-}
-
-/*
-`hlf r` sets register r to half its current value, then continues with the next instruction.
-`tpl r`` sets register r to triple its current value, then continues with the next instruction.
-`inc r`` increments register r, adding 1 to it, then continues with the next instruction.
-`jmp offset` is a jump; it continues with the instruction offset away relative to itself.
-`jie r, offset` is like jmp, but only jumps if register r is even ("jump if even").
-`jio r, offset is like jmp, but only jumps if register r is 1 ("jump if one", not odd).
-*/
-#[derive(Debug)]
-enum Instruction {
-    Hlf(Register),
-    Tpl(Register),
-    Inc(Register),
-    Jmp(i64),
-    Jie(Register, i64),
-    Jio(Register, i64),
-    Err,
-}
-
-fn parse_program(input: &str) -> Vec<Instruction> {
-    input
-        .lines()
-        .map(|l| {
-            let words: Vec<&str> = l.split_whitespace().collect();
-            match words[0] {
-                "hlf" => Instruction::Hlf(Register::from_str(words[1])),
-                "tpl" => Instruction::Tpl(Register::from_str(words[1])),
-                "inc" => Instruction::Inc(Register::from_str(words[1])),
-                "jmp" => Instruction::Jmp(words[1].parse::<i64>().unwrap()),
-                "jie" => Instruction::Jie(
-                    Register::from_str(words[1]),
-                    words[2].parse::<i64>().unwrap(),
-                ),
-                "jio" => Instruction::Jio(
-                    Register::from_str(words[1]),
-                    words[2].parse::<i64>().unwrap(),
-                ),
-                _ => Instruction::Err,
-            }
-        })
-        .collect()
-}
-
-fn execute_program(input: &str, initial_a_value: i64, initial_b_value: i64) -> (i64, i64) {
-    let program_instructions = parse_program(input);
-
-    let mut registers: HashMap<Register, i64> = HashMap::from_iter(vec![
-        (Register::A, initial_a_value),
-        (Register::B, initial_b_value),
-    ]);
-
-    let mut curr_instruction: i64 = 0;
-
-    loop {
-        let instruction = &program_instructions[curr_instruction as usize];
-
-        let mut new_instruction: i64 = curr_instruction;
-
-        match instruction {
-            Instruction::Hlf(reg) => {
-                *registers.get_mut(reg).unwrap() = registers[reg] / 2;
-                new_instruction += 1;
-            }
-            Instruction::Tpl(reg) => {
-                *registers.get_mut(reg).unwrap() = registers[reg] * 3;
-                new_instruction += 1;
-            }
-            Instruction::Inc(reg) => {
-                *registers.get_mut(reg).unwrap() = registers[reg] + 1;
-                new_instruction += 1;
-            }
-            Instruction::Jmp(ins) => {
-                new_instruction += *ins;
-            }
-            Instruction::Jie(reg, ins) => {
-                if registers[reg] % 2 == 0 {
-                    new_instruction += *ins;
-                } else {
-                    new_instruction += 1;
-                }
-            }
-            Instruction::Jio(reg, ins) => {
-                if registers[reg] == 1 {
-                    new_instruction += *ins;
-                } else {
-                    new_instruction += 1;
-                }
-            }
-            _ => {}
-        }
-
-        if new_instruction < 0 || new_instruction >= program_instructions.len() as i64 {
-            break;
-        }
-
-        curr_instruction = new_instruction;
-    }
-
-    (registers[&Register::A], registers[&Register::B])
-}
-
-#[aoc(day23, part1)]
-pub fn run(input: &str) -> String {
-    let res = execute_program(&input, 0, 0).1.to_string(); //register B
-
-    utils::solve(2015, 23, "1", &res);
-
-    res
-}
-
-#[aoc(day23, part2)]
-pub fn run_pt2(input: &str) -> String {
-    let res = execute_program(&input, 1, 0).1.to_string(); //register B
-
-    utils::solve(2015, 23, "2", &res);
-
-    res
-}
-
-#[test]
-fn test() {
-    assert_eq!(
-        execute_program(
-            r#"inc a
-jio a, +2
-tpl a
-inc a"#,
-            0,
-            0
-        ).0, //register A
-        2
-    );
-}
-
+<span>use std::collections::HashMap;</span>
+<span>use crate::utils;</span>
+<span>use std::iter::FromIterator;</span>
+<span></span>
+<span>#[derive(Debug, Hash, Eq, PartialEq)]</span>
+<span>enum Register {</span>
+<span>    A,</span>
+<span>    B,</span>
+<span>}</span>
+<span></span>
+<span>impl Register {</span>
+<span>    fn from_str(r: &str) -> Self {</span>
+<span>        if r.trim_matches(',') == "a" {</span>
+<span>            Register::A</span>
+<span>        } else {</span>
+<span>            Register::B</span>
+<span>        }</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>/*</span>
+<span>`hlf r` sets register r to half its current value, then continues with the next instruction.</span>
+<span>`tpl r`` sets register r to triple its current value, then continues with the next instruction.</span>
+<span>`inc r`` increments register r, adding 1 to it, then continues with the next instruction.</span>
+<span>`jmp offset` is a jump; it continues with the instruction offset away relative to itself.</span>
+<span>`jie r, offset` is like jmp, but only jumps if register r is even ("jump if even").</span>
+<span>`jio r, offset is like jmp, but only jumps if register r is 1 ("jump if one", not odd).</span>
+<span>*/</span>
+<span>#[derive(Debug)]</span>
+<span>enum Instruction {</span>
+<span>    Hlf(Register),</span>
+<span>    Tpl(Register),</span>
+<span>    Inc(Register),</span>
+<span>    Jmp(i64),</span>
+<span>    Jie(Register, i64),</span>
+<span>    Jio(Register, i64),</span>
+<span>    Err,</span>
+<span>}</span>
+<span></span>
+<span>fn parse_program(input: &str) -> Vec<Instruction> {</span>
+<span>    input</span>
+<span>        .lines()</span>
+<span>        .map(|l| {</span>
+<span>            let words: Vec<&str> = l.split_whitespace().collect();</span>
+<span>            match words[0] {</span>
+<span>                "hlf" => Instruction::Hlf(Register::from_str(words[1])),</span>
+<span>                "tpl" => Instruction::Tpl(Register::from_str(words[1])),</span>
+<span>                "inc" => Instruction::Inc(Register::from_str(words[1])),</span>
+<span>                "jmp" => Instruction::Jmp(words[1].parse::<i64>().unwrap()),</span>
+<span>                "jie" => Instruction::Jie(</span>
+<span>                    Register::from_str(words[1]),</span>
+<span>                    words[2].parse::<i64>().unwrap(),</span>
+<span>                ),</span>
+<span>                "jio" => Instruction::Jio(</span>
+<span>                    Register::from_str(words[1]),</span>
+<span>                    words[2].parse::<i64>().unwrap(),</span>
+<span>                ),</span>
+<span>                _ => Instruction::Err,</span>
+<span>            }</span>
+<span>        })</span>
+<span>        .collect()</span>
+<span>}</span>
+<span></span>
+<span>fn execute_program(input: &str, initial_a_value: i64, initial_b_value: i64) -> (i64, i64) {</span>
+<span>    let program_instructions = parse_program(input);</span>
+<span></span>
+<span>    let mut registers: HashMap<Register, i64> = HashMap::from_iter(vec![</span>
+<span>        (Register::A, initial_a_value),</span>
+<span>        (Register::B, initial_b_value),</span>
+<span>    ]);</span>
+<span></span>
+<span>    let mut curr_instruction: i64 = 0;</span>
+<span></span>
+<span>    loop {</span>
+<span>        let instruction = &program_instructions[curr_instruction as usize];</span>
+<span></span>
+<span>        let mut new_instruction: i64 = curr_instruction;</span>
+<span></span>
+<span>        match instruction {</span>
+<span>            Instruction::Hlf(reg) => {</span>
+<span>                *registers.get_mut(reg).unwrap() = registers[reg] / 2;</span>
+<span>                new_instruction += 1;</span>
+<span>            }</span>
+<span>            Instruction::Tpl(reg) => {</span>
+<span>                *registers.get_mut(reg).unwrap() = registers[reg] * 3;</span>
+<span>                new_instruction += 1;</span>
+<span>            }</span>
+<span>            Instruction::Inc(reg) => {</span>
+<span>                *registers.get_mut(reg).unwrap() = registers[reg] + 1;</span>
+<span>                new_instruction += 1;</span>
+<span>            }</span>
+<span>            Instruction::Jmp(ins) => {</span>
+<span>                new_instruction += *ins;</span>
+<span>            }</span>
+<span>            Instruction::Jie(reg, ins) => {</span>
+<span>                if registers[reg] % 2 == 0 {</span>
+<span>                    new_instruction += *ins;</span>
+<span>                } else {</span>
+<span>                    new_instruction += 1;</span>
+<span>                }</span>
+<span>            }</span>
+<span>            Instruction::Jio(reg, ins) => {</span>
+<span>                if registers[reg] == 1 {</span>
+<span>                    new_instruction += *ins;</span>
+<span>                } else {</span>
+<span>                    new_instruction += 1;</span>
+<span>                }</span>
+<span>            }</span>
+<span>            _ => {}</span>
+<span>        }</span>
+<span></span>
+<span>        if new_instruction < 0 || new_instruction >= program_instructions.len() as i64 {</span>
+<span>            break;</span>
+<span>        }</span>
+<span></span>
+<span>        curr_instruction = new_instruction;</span>
+<span>    }</span>
+<span></span>
+<span>    (registers[&Register::A], registers[&Register::B])</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day23, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let res = execute_program(&input, 0, 0).1.to_string(); //register B</span>
+<span></span>
+<span>    utils::solve(2015, 23, "1", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day23, part2)]</span>
+<span>pub fn run_pt2(input: &str) -> String {</span>
+<span>    let res = execute_program(&input, 1, 0).1.to_string(); //register B</span>
+<span></span>
+<span>    utils::solve(2015, 23, "2", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test() {</span>
+<span>    assert_eq!(</span>
+<span>        execute_program(</span>
+<span>            r#"inc a</span>
+<span>jio a, +2</span>
+<span>tpl a</span>
+<span>inc a"#,</span>
+<span>            0,</span>
+<span>            0</span>
+<span>        ).0, //register A</span>
+<span>        2</span>
+<span>    );</span>
+<span>}</span>
+<span></span>
 </pre>
