--- a/viewer/day25.html
+++ b/viewer/day25.html
@@ -1,4 +1,32 @@
-<style>pre{font-size: large;}</style>
+<style>
+    pre {
+  background: #303030;
+  color: #f1f1f1;
+  padding: 10px 16px;
+  border-radius: 2px;
+  border-top: 4px solid #00aeef;
+  -moz-box-shadow: inset 0 0 10px #000;
+  box-shadow: inset 0 0 10px #000;
+  counter-reset: line;
+}
+pre span {
+  display: block;
+  line-height: 1.5rem;
+}
+pre span:before {
+  counter-increment: line;
+  content: counter(line);
+  display: inline-block;
+  border-right: 1px solid #ddd;
+  padding: 0 .5em;
+  margin-right: .5em;
+  color: #888
+}
+span{
+    font-family: monospace;
+    font-size: 16px;
+}
+</style>
 <script src="script.js"></script>
 <div id="navigation">
 <button onclick="navigateTo('prev')">Previous Day</button>
@@ -6,85 +34,85 @@
 </div>
 <h1>Day 25</h1>
 <pre>
-use crate::utils;
-use regex::Regex;
-
-/*
-filled in the diagonal upwards starting from position (1, 1), like this
-start in (diagonal, 1) and end in (1, diagonal)
-
-   | 1   2   3   4   5   6  
----+---+---+---+---+---+---+
- 1 |  1   3   6  10  15  21
- 2 |  2   5   9  14  20
- 3 |  4   8  13  19
- 4 |  7  12  18
- 5 | 11  17
- 6 | 16
-
-*/
-fn code_at(row_target: i128, col_target: i128) -> i128 {
-    let mut diagonal = 2;
-    
-    let mut last = 20_151_125; //got from the puzzle, value at (1,1)
-
-    loop {
-        let mut row = diagonal;
-        let mut col = 1;
-
-        while col <= diagonal {
-            last = (last * 252_533) % 33_554_393; //rule from the puzzle
-
-            if row == row_target && col == col_target {
-                return last;
-            }
-
-            row -= 1;
-            col += 1;
-        }
-
-        diagonal += 1;
-    }
-}
-
-fn get_instructions(input: &str) -> (i128, i128) {
-    let re = Regex::new(r"row (\d+), column (\d+)").unwrap();
-
-    let caps = re.captures(input).expect("No matches found");
-
-    let row: u32 = caps.get(1).unwrap().as_str().parse().expect("Not a valid number");
-    let column: u32 = caps.get(2).unwrap().as_str().parse().expect("Not a valid number");
-
-    (row as i128, column as i128)
-}
-
-#[aoc(day25, part1)]
-pub fn run(input: &str) -> String {
-    let instructions = get_instructions(input);
-
-    let res = code_at(instructions.0, instructions.1).to_string();
-
-    utils::solve(2015, 25, "1", &res);
-
-    res
-}
-
-#[test]
-fn test() {
-    assert_eq!(code_at(2, 1), 31916031);
-    assert_eq!(code_at(2, 2), 21629792);
-    assert_eq!(code_at(2, 3), 16929656);
-    assert_eq!(code_at(2, 4), 7726640);
-    assert_eq!(code_at(2, 5), 15514188);
-    assert_eq!(code_at(2, 6), 4041754);
-
-    assert_eq!(code_at(6, 1), 33071741);
-    assert_eq!(code_at(6, 2), 6796745);
-    assert_eq!(code_at(6, 3), 25397450);
-    assert_eq!(code_at(6, 4), 24659492);
-    assert_eq!(code_at(6, 5), 1534922);
-    assert_eq!(code_at(6, 6), 27995004);
-}
-            
-
+<span>use crate::utils;</span>
+<span>use regex::Regex;</span>
+<span></span>
+<span>/*</span>
+<span>filled in the diagonal upwards starting from position (1, 1), like this</span>
+<span>start in (diagonal, 1) and end in (1, diagonal)</span>
+<span></span>
+<span>   | 1   2   3   4   5   6  </span>
+<span>---+---+---+---+---+---+---+</span>
+<span> 1 |  1   3   6  10  15  21</span>
+<span> 2 |  2   5   9  14  20</span>
+<span> 3 |  4   8  13  19</span>
+<span> 4 |  7  12  18</span>
+<span> 5 | 11  17</span>
+<span> 6 | 16</span>
+<span></span>
+<span>*/</span>
+<span>fn code_at(row_target: i128, col_target: i128) -> i128 {</span>
+<span>    let mut diagonal = 2;</span>
+<span>    </span>
+<span>    let mut last = 20_151_125; //got from the puzzle, value at (1,1)</span>
+<span></span>
+<span>    loop {</span>
+<span>        let mut row = diagonal;</span>
+<span>        let mut col = 1;</span>
+<span></span>
+<span>        while col <= diagonal {</span>
+<span>            last = (last * 252_533) % 33_554_393; //rule from the puzzle</span>
+<span></span>
+<span>            if row == row_target && col == col_target {</span>
+<span>                return last;</span>
+<span>            }</span>
+<span></span>
+<span>            row -= 1;</span>
+<span>            col += 1;</span>
+<span>        }</span>
+<span></span>
+<span>        diagonal += 1;</span>
+<span>    }</span>
+<span>}</span>
+<span></span>
+<span>fn get_instructions(input: &str) -> (i128, i128) {</span>
+<span>    let re = Regex::new(r"row (\d+), column (\d+)").unwrap();</span>
+<span></span>
+<span>    let caps = re.captures(input).expect("No matches found");</span>
+<span></span>
+<span>    let row: u32 = caps.get(1).unwrap().as_str().parse().expect("Not a valid number");</span>
+<span>    let column: u32 = caps.get(2).unwrap().as_str().parse().expect("Not a valid number");</span>
+<span></span>
+<span>    (row as i128, column as i128)</span>
+<span>}</span>
+<span></span>
+<span>#[aoc(day25, part1)]</span>
+<span>pub fn run(input: &str) -> String {</span>
+<span>    let instructions = get_instructions(input);</span>
+<span></span>
+<span>    let res = code_at(instructions.0, instructions.1).to_string();</span>
+<span></span>
+<span>    utils::solve(2015, 25, "1", &res);</span>
+<span></span>
+<span>    res</span>
+<span>}</span>
+<span></span>
+<span>#[test]</span>
+<span>fn test() {</span>
+<span>    assert_eq!(code_at(2, 1), 31916031);</span>
+<span>    assert_eq!(code_at(2, 2), 21629792);</span>
+<span>    assert_eq!(code_at(2, 3), 16929656);</span>
+<span>    assert_eq!(code_at(2, 4), 7726640);</span>
+<span>    assert_eq!(code_at(2, 5), 15514188);</span>
+<span>    assert_eq!(code_at(2, 6), 4041754);</span>
+<span></span>
+<span>    assert_eq!(code_at(6, 1), 33071741);</span>
+<span>    assert_eq!(code_at(6, 2), 6796745);</span>
+<span>    assert_eq!(code_at(6, 3), 25397450);</span>
+<span>    assert_eq!(code_at(6, 4), 24659492);</span>
+<span>    assert_eq!(code_at(6, 5), 1534922);</span>
+<span>    assert_eq!(code_at(6, 6), 27995004);</span>
+<span>}</span>
+<span>            </span>
+<span></span>
 </pre>
